--- a/malkoapp.yml
+++ b/malkoapp.yml
@@ -49,7 +49,49 @@ spec:
 
   destination:
     namespace: default
-    server: https://10.70.0.13:6443
+    server: project: default
+source:
+  repoURL: 'https://charts.bitnami.com/bitnami'
+  targetRevision: 15.2.2
+  helm:
+    values: |
+      wordpressUsername: admin
+      wordpressPassword: qwerty
+      wordpressFirstName: Malko
+      wordpressLastName: App
+      wordpressBlogName: Blog
+      service:
+        type: ClusterIP
+      mariadb:
+        enabled: true
+        architecture: standalone
+        auth:
+          rootPassword: "mariadb"
+          database: bitnami_wordpress
+          username: bn_wordpress
+          password: "mariadb"
+        primary:
+          persistence:
+            enabled: true
+            storageClass: standart-rwo
+            accessModes:
+              - ReadWriteOnce
+            size: 5Gi
+      memcached:
+        enabled: true
+        auth:
+          enabled: true
+          username: "admin"
+          password: "qwerty"
+  chart: wordpress
+destination:
+  server: https://kubernetes.default.svc
+  namespace: default
+syncPolicy:
+  automated:
+    prune: true
+    selfHeal: true
+
   syncPolicy:
     automated:
       selfHeal: true
